# fuzzydigilib

./: .gitattributes  .gitignore  LICENSE.txt  README.md  app.json  app.py  config.json  index.html  pyproject.toml  requirements.txt  script.py  script_u_70000.py
digilib-contrib/: 1 Cleaning.ipynb
heroku/: app.py  requirements.txt
raw_under_10000/: 1.json  10.json  1000.json  1001.json  1002.json  1003.json  1004.json  1005.json  1006.json  1007.json  1008.json  1009.json  1010.json  1011.json  1012.json  1013.json  1014.json  1015.json  1016.json  1017.json  1018.json  1019.json  1020.json  1021.json  1022.json  1023.json  1024.json  1025.json  1026.json  1027.json  1028.json  1029.json  1030.json  1031.json  1032.json  1033.json  1034.json  1035.json  1036.json  1037.json  (+9533 more)
raw_under_20000/: 10000.json  10001.json  10002.json  10003.json  10004.json  10005.json  10006.json  10007.json  10009.json  10010.json  10011.json  10012.json  10013.json  10016.json  10017.json  10018.json  10020.json  10021.json  10022.json  10023.json  10024.json  10025.json  10026.json  10027.json  10028.json  10029.json  10030.json  10031.json  10032.json  10033.json  10034.json  10035.json  10036.json  10037.json  10038.json  10039.json  10040.json  10041.json  10042.json  10043.json  (+9865 more)
raw_under_30000/: 20000.json  20001.json  20002.json  20003.json  20004.json  20005.json  20006.json  20007.json  20008.json  20009.json  20010.json  20011.json  20012.json  20013.json  20014.json  20015.json  20016.json  20017.json  20018.json  20019.json  20020.json  20021.json  20022.json  20023.json  (+9855 more)
(+46770 files in other folders)
